# password-validator

./: .coverage  README.md  pyproject.toml
src/: app.py
src/core/: config.py
src/routers/: auth.py  validation.py
src/schemas/: validation_schemas.py
src/services/: auth_service.py  validation_service.py
tests/: test_app.py  test_token.py  test_validation.py  test_validation_service.py
